<resources>
    <string name="app_name">闪课表</string>

    <!--  normal description  -->
    <string name="confirm">确认</string>
    <string name="determine">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="close">关闭</string>
    <string name="error">错误</string>
    <string name="submit">提交</string>
    <string name="save">保存</string>
    <string name="check">检查</string>
    <string name="delete">删除</string>
    <string name="modify">修改</string>
    <string name="use">使用</string>
    <string name="setting">设置</string>

    <!--  day  -->
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>

    <!--  course elements  -->
    <string name="course_title">名称</string>
    <string name="course_day">星期</string>
    <string name="course_section">节次</string>
    <string name="course_classroom">教室</string>
    <string name="course_teacher">教师</string>
    <string name="course_week">周次</string>

    <!--  course decoration elements -->
    <string name="course_color">课程颜色</string>
    <string name="course_text_color">文字颜色</string>

    <!--  labels  -->
    <string name="title_display_fragment">主页</string>
    <string name="title_settings_fragment">设置</string>
    <string name="title_edit_schedule_fragment">编辑课表</string>
    <string name="title_edit_course_fragment">编辑课程</string>
    <string name="title_course_name_dialog">课程名称</string>
    <string name="title_course_day_dialog">选择星期</string>
    <string name="title_course_section_dialog">选择节次</string>
    <string name="title_course_week_dialog">选择周次</string>
    <string name="title_course_color_fragment">课程颜色</string>
    <string name="title_text_color_dialog">文字颜色</string>
    <string name="title_schedule_end_section_dialog">每日课程数</string>
    <string name="title_schedule_name_dialog">课程名称</string>
    <string name="title_schedule_end_day_dialog">课程结束日</string>
    <string name="title_schedule_start_date_dialog">开学日期</string>
    <string name="title_schedule_end_week_dialog">学期总周数</string>
    <string name="title_edit_routine_fragment">编辑作息表</string>
    <string name="title_schedule_create_way_fragment">添加课表</string>

    <!--  FragmentDisplay  -->
    <string name="fragment_display_week">第 %1$d 周</string>
    <string name="fragment_display_not_this_week">非本周</string>
    <string name="fragment_display_noting">无课表</string>
    <string name="fragment_display_upcoming">未开始</string>
    <string name="fragment_display_ended">已结束</string>

    <!--  FragmentSettings  -->
    <string name="fragment_settings_start_setting">开始设置</string>
    <string name="fragment_settings_schedule">课表</string>
    <string name="fragment_settings_add_schedule">添加课表</string>
    <string name="fragment_settings_manage_schedule">管理课表</string>
    <string name="fragment_settings_course">课程</string>
    <string name="fragment_settings_add_course">向课表添加课程</string>
    <string name="fragment_settings_manage_course">管理课表中的课程</string>
    <string name="fragment_settings_feedback">反馈与建议</string>
    <string name="fragment_settings_fed_by_email">通过电子邮件反馈</string>
    <string name="fragment_settings_feedback_subject">关于闪课表的反馈与建议</string>
    <string name="fragment_settings_chooser_title">选择邮箱客户端</string>

    <!--  FragmentScheduleCreateWay  -->
    <string name="fragment_schedule_create_way_manual">手动添加</string>
    <string name="fragment_schedule_create_way_file_import">从文件导入</string>
    <string name="fragment_schedule_create_way_network_import">从网络导入</string>

    <!--  FragmentEditSchedule  -->
    <string name="fragment_edit_schedule_new">新建课表</string>
    <string name="fragment_edit_schedule_modify">修改课表</string>
    <string name="fragment_edit_schedule_schedule_name">课表名称</string>
    <string name="fragment_edit_schedule_start_date">开学日期</string>
    <string name="fragment_edit_schedule_end_section">每日课程节数</string>
    <string name="fragment_edit_schedule_end_day">每星期课程结束日</string>
    <string name="fragment_edit_schedule_end_week">学期总周数</string>
    <string name="fragment_edit_schedule_routines">作息表</string>
    <string name="fragment_edit_schedule_add_routine">添加新作息</string>
    <string name="fragment_edit_schedule_to_display">同时设置为主页课表</string>

    <!--  FragmentEditRoutine  -->
    <string name="fragment_edit_routine_new_segment">添加时段</string>
    <string name="fragment_edit_routine_name">作息表名称</string>
    <string name="fragment_edit_routine_start_date">作息表开始日期</string>
    <string name="fragment_edit_routine_section_duration">课程时长</string>

    <!--  DialogCourseName  -->
    <string name="dialog_course_name_hint">课程名称</string>
    <string name="dialog_course_name_text_overflow">文本长度溢出</string>

    <!--  DialogCourseSection  -->
    <string name="dialog_course_section_start_section">开始节</string>
    <string name="dialog_course_section_end_section">结束节</string>

    <!--  DialogCourseWeek  -->
    <string name="dialog_course_week_select_all">全选</string>
    <string name="dialog_course_week_select_none">全不选</string>
    <string name="dialog_course_week_even_week">双周</string>
    <string name="dialog_course_week_odd_week">单周</string>

    <!--  FragmentCourseColor  -->
    <string name="fragment_course_color_selected_color">已选择的颜色：</string>

    <!--  DialogTextColor  -->
    <string name="dialog_text_color_light">浅色</string>
    <string name="dialog_text_color_dark">深色</string>

    <!--  DialogRoutineDuration  -->
    <string name="dialog_routine_duration_progress">%1$d 分钟</string>

    <!--  DialogDatePicker  -->
    <string name="dialog_date_picker_title">选择日期</string>

    <!--  DialogTimePicker  -->
    <string name="dialog_time_picker_title">选择时间</string>

    <!--  DialogScheduleDetails  -->
    <string name="dialog_schedule_details_date">开学日期</string>
    <string name="dialog_schedule_details_end_section">每日课程节数</string>
    <string name="dialog_schedule_details_end_day">每星期课程结束日</string>
    <string name="dialog_schedule_details_end_week">学期总周数</string>

    <!--  CellScheduleList  -->
    <string name="cell_schedule_list_using">使用中</string>
</resources>