<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_shape_rectangle_16_0"
    android:backgroundTint="?android:attr/colorBackground">

    <TextView
        android:id="@+id/dialog_end_day_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_schedule_end_day_dialog"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dialog_end_day_close"
        android:layout_width="@dimen/clickable_icon_width"
        android:layout_height="@dimen/clickable_icon_height"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/close"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_end_day_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dialog_end_day_title"
        app:srcCompat="@drawable/ic_baseline_cross_24" />

    <RadioGroup
        android:id="@+id/dialog_end_day_radio_group"
        android:layout_width="@dimen/floating_center_dialog_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_end_day_title">

        <RadioButton
            android:id="@+id/dialog_end_day_friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:includeFontPadding="false"
            android:text="@string/friday"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/dialog_end_day_saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/saturday"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/dialog_end_day_sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/sunday"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/dialog_end_day_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_end_day_radio_group" />


</androidx.constraintlayout.widget.ConstraintLayout>
