<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_shape_rectangle_16_0"
    android:backgroundTint="?android:attr/colorBackground">

    <TextView
        android:id="@+id/dialog_text_color_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_text_color_dialog"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dialog_text_color_close"
        android:layout_width="@dimen/clickable_icon_width"
        android:layout_height="@dimen/clickable_icon_height"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/close"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_text_color_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dialog_text_color_title"
        app:srcCompat="@drawable/ic_baseline_cross_24" />

    <RadioGroup
        android:id="@+id/dialog_text_color_radio_group"
        android:layout_width="@dimen/floating_center_dialog_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_text_color_title">

        <RadioButton
            android:id="@+id/dialog_text_color_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:includeFontPadding="false"
            android:text="@string/dialog_text_color_light"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/dialog_text_color_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/dialog_text_color_dark"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>