<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_shape_rectangle_16_0"
    android:backgroundTint="?android:attr/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_course_week_container"
        android:layout_width="@dimen/floating_center_dialog_width"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dialog_course_week_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/title_course_week_dialog"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/dialog_course_week_flow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dialog_course_week_cancel"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/close"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_course_week_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dialog_course_week_title"
            app:srcCompat="@drawable/ic_baseline_cross_24" />


        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/dialog_course_week_flow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            app:flow_horizontalStyle="spread_inside"
            app:flow_maxElementsWrap="4"
            app:flow_verticalGap="16dp"
            app:flow_wrapMode="aligned"
            app:layout_constraintBottom_toTopOf="@id/dialog_course_week_panel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_course_week_title" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/dialog_course_week_panel"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:constraint_referenced_ids="dialog_course_week_all,dialog_course_week_even,dialog_course_week_odd"
            app:flow_wrapMode="chain"
            app:layout_constraintBottom_toTopOf="@id/dialog_course_week_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_course_week_flow" />


        <TextView
            android:id="@+id/dialog_course_week_all"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/bg_selector_icon_selectable"
            android:gravity="center"
            android:text="@string/dialog_course_week_select_all"
            android:textSize="11sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="65dp"
            tools:layout_editor_absoluteY="70dp" />

        <TextView
            android:id="@+id/dialog_course_week_even"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/bg_selector_icon_selectable"
            android:gravity="center"
            android:text="@string/dialog_course_week_even_week"
            android:textSize="11sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="70dp" />

        <TextView
            android:id="@+id/dialog_course_week_odd"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/bg_selector_icon_selectable"
            android:gravity="center"
            android:text="@string/dialog_course_week_odd_week"
            android:textSize="11sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="209dp"
            tools:layout_editor_absoluteY="70dp" />

        <TextView
            android:id="@+id/dialog_course_week_confirm"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_selector_rectangle_8_0"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="?android:attr/textColorLink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/dialog_course_week_panel"
            app:layout_constraintStart_toStartOf="@+id/dialog_course_week_panel"
            app:layout_constraintTop_toBottomOf="@id/dialog_course_week_panel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>