<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_shape_rectangle_16_0"
    android:backgroundTint="?android:attr/colorBackground">

    <TextView
        android:id="@+id/dialog_routine_duration_title"
        android:layout_width="@dimen/floating_center_dialog_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/fragment_edit_routine_section_duration"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dialog_routine_duration_cancel"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/close"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_routine_duration_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dialog_routine_duration_title"
        app:srcCompat="@drawable/ic_baseline_cross_24" />

    <TextView
        android:id="@+id/dialog_routine_duration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_routine_duration_title"
        tools:text="45" />

    <SeekBar
        android:id="@+id/dialog_routine_duration_progress"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_routine_duration_text" />

    <TextView
        android:id="@+id/dialog_routine_duration_confirm"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_selector_icon_selectable"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_routine_duration_progress" />

</androidx.constraintlayout.widget.ConstraintLayout>